[package]
name = "lxc-idmap"
authors = ["Stathis Stamoulis <sstamoulis2010@gail.com>"]
description = "lxc-idmap is a utility that generates the configuration needed to map the provided UIDs and GIDs between the host and a lxc container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.1", features = ["derive", "cargo"]}
